--- a/fuelwatch/Templates/JsonResults.html
+++ b/fuelwatch/Templates/JsonResults.html
@@ -1,119 +1,139 @@
 {% extends "base.html" %}
-{% block main %}
 
-         <div class="">
-           <br>
-           <br>
-         </div>
+{% block content %}
 
-         <div id="myfilter"></div>
-         <div id="mytable"></div>
+    <div id="myfilter"></div>
+    <h1>Hello</h1>
 
-
-        <script type="text/javascript">
-          var data = [];
-          var listdata = [];
-          var newdata = [];
-
-          filter = {
-                      view: function()
-                   {
-                     return m('div.form-group.col-sm-40 col-form-label',
-                            m('form#myform',
-                            {onsubmit: function(e)
-                                {e.preventDefault();
-                                   var url = '{% url 'mithrildata'  %}' + '?' + $("#myform").serialize();
-                                   console.log('url' , url);
-                                   $.get(url, function(json)
-                                          {
-                                            console.log('json',json)
-                                            listdata = json
-                                            Filterprice = 130 ;
-                                            console.log('Filterprice',Filterprice)
-                                            newdata = listdata.filter(
-                                                                      function(item)
-                                                                      {
-                                                                       //return true
-                                                                      return item.Price <= Filterprice;
-                                                                      }
-                                                                     );
-
-
-                                            console.log('newdata',newdata)
-                                            m.redraw();
-                                          }
-                                        );
+    <script type="text/javascript">
+        var fuelwatch_data = [];
+        var filtered_data =[];
+        var component_filter = {
+            // Render HTML for Search functionality
+            view: function()
+                {
+                return m("div",{
+                    class:"container"
+                    },
+                    m("h4[style=color:#1f2328]",{
+                        class: "text-muted"
+                        },"Search Fuel Price"
+                    ),
+                    m("br"),
+                    m("form",{
+                        id:"myform"
+                        },
+                        m("p",{
+                            class:"form-inline"
+                            },
+                            'FuelType: ',
+                            m("input",{
+                                type:"text",
+                                name:"product_input",
+                                class:"form-control",
+                                placeholder:"Product name"
                                 }
-                             },
-                            m("table.table-sm",
-                                m('tr',
-                                  m('td', {label :'Product',},"Product"),
-                                  m('td',m('input.style1[name=Product]'))
-                                ),
-                                m('br'),
-                                m('tr',
-                                  m('td', {label :'Metroregion' ,},"Metroregion"),
-                                  m('td',m('input.style1[name=Metroregion]'))
-                                ),
-                                m('br'),
-                                m("button.btn btn-lg btn-primary", {onclick: function(){}},"Submit"),
-                                // m('br'),
-                                // m('tr',
-                                //   m('td', {label :'Filter Price' ,},"Filter Price"),
-                                //   m('td',m('input.style1[name=Filterprice]'))
-                                // ),
-                               m("button.btn btn-lg btn-primary",
-                                    {onclick: function(Filterprice)
-                                      {
-                                        newdata = listdata.filter(
-                                                                  (Filterprice) => listdata.map((i) => i.Price <= Filterprice )
-                                                                );
-                                        console.log(newdata)
-                                      }
-                                    },"Filter"),
-                        )))
-
-                }
-            };
-
-
-            var table = {view: function(){
-                           //return m('h1', "Hi")
-
-                           console.log('listdata', listdata)
-                           return m("table.table.table-striped",
-                                  m ('thead',m("tr",
-                                             m("th","Price"),
-                                             m("th","Location"),
-                                             m("th","Address"),
-                                             m("th","Phone"),
-                                             m("th","Brand"),
-                                             m("th", "Date"),
-                                           )),
-                                m("tbody",listdata.map(i=> m("tr",
-                                                   m("td",  i.Price),
-                                                    m("td",  i.Location),
-                                                    m("td",  i.Address),
-                                                    m("td",  i.Phone),
-                                                    m("td",  i.Brand),
-                                                    m("td",  i.Date),)
-                                                                 )
-                                                               ))
-                                                             }}
-
-
-// return m('b', listdata.map(function(data) {
-//   console.log('data',data);
-//   return data.Price
-// }))
-
-
-             m.mount(document.getElementById('myfilter'), filter);
-             m.mount(document.getElementById('mytable'), table);
-
-
-          </script>
-
-
-
-    {% endblock %}
+                            )
+                        ),
+                        m('p',{
+                            class:"form-inline"
+                            },
+                            'MetroRegion: ',
+                            m("input",{
+                                type:"text",
+                                name:"region_input",
+                                class:"form-control",
+                                placeholder:"Metro Region name"
+                            }
+                            )
+                        ),
+                        m("p",{
+                            class:"form-inline"
+                            },
+                            'Tommorrow: ',
+                            m("input",{
+                                type:"checkbox",
+                                name:"Tomorrow",
+                                class:"form-check-input",
+                                id:"Tommorrow"
+                            }
+                            )
+                        ),
+                        m("br"),
+                        m("br"),
+                        m("button", {
+                                type:"submit",
+                                class:"btn btn-primary",
+                                onclick: function(e)
+                                    {
+                                        e.preventDefault();
+                                        var url = '{% url 'mithrildata' %}' + '?' + $("#myform").serialize();
+                                        console.log(url);
+                                        $.get(url, function(json)
+                                            {
+                                                fuelwatch_data = json;
+                                                console.log('sd',fuelwatch_data)
+                                                m.redraw();  {# Refresh all Mithril content #}
+                                            }
+                                        );
+                                        if (fuelwatch_data)
+                                            {
+                                                $("#filter_btn").removeAttr("disabled");
+                                                console.log('Filter is enabled')
+                                            }
+                                    }
+                            },"Submit"
+                        ),
+                        m("button", {
+                            type:"submit",
+                            class:"btn btn-primary",
+                            id:"filter_btn",
+                            value:"disable",
+                            onclick:function filterdata(e)
+                                {
+                                    event.preventDefault();
+                                    var filterprice = 130 ;
+                                    console.log('Filterprice: ', filterprice);
+                                    filtered_data = fuelwatch_data.filter(
+                                        function(item)
+                                            {
+                                                return item.Price <= filterprice;
+                                            }
+                                        );
+                                    fuelwatch_data = filtered_data;
+                                    console.log('filter_data',filtered_data);
+                                    m.redraw();
+                                }
+                        }, "Filter"
+                        )
+                    ), // Close form out
+                    m("table.table.table-striped",
+                        m ("thead.thead-dark",
+                            m("tr",
+                                m("th","Price"),
+                                m("th","Location"),
+                                m("th","Address"),
+                                m("th","Phone"),
+                                m("th","Brand"),
+                                m("th", "Date")
+                            )
+                        ),
+                        m("tbody",
+                            fuelwatch_data.map(i=> m("tr",
+                                m("td", i.Price),
+                                m("td", i.Location),
+                                m("td", i.Address),
+                                m("td", i.Phone),
+                                m("td", i.Brand),
+                                m("td", i.Date)
+                                )
+                            )
+                        )
+                    )
+                )
+                }// Close mithril function
+        };// Close mithril component
+        // m.mount is used to activate mithril component
+        m.mount(document.getElementById('myfilter'), component_filter);
+    </script>
+{% endblock %}
