Mithril code add slider

--- a/fuelwatch/Templates/base.html
+++ b/fuelwatch/Templates/base.html
@@ -10,6 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="//unpkg.com/mithril/mithril.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/leongersen/noUiSlider@10.1.0/distribute/nouislider.min.js" integrity="sha256-R9uiXmQekNb8r352uyt9EW3yRd3VZL3NyU8N0Z5fMo0=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/leongersen/noUiSlider@10.1.0/distribute/nouislider.min.css" integrity="sha256-2K003H0jZA9S0f2CtcQ0zIYD65lfKdAA00qtDCPIMV0=" crossorigin="anonymous">
       {% block head %}
       {% endblock head %}
   </head>
