--- a/fuelwatch/Templates/mithril.html
+++ b/fuelwatch/Templates/mithril.html
@@ -31,7 +31,18 @@
                             //if button status is flase then disbale filter button
                               BtnAttr.disabled = true;
                             }
+                    // filter data by id_slider
+                    filter_data = fuelwatch_data.filter(
+                                                  function(item)
+                                                  {
+                                                   //return true
+                                                  return (item.Price >= price_low && item.Price <= price_high);
+                                                  }
+                                                 );
+
+                        data = filter_data;
                       // Render HTML for Search functionality
+
                       return m("main",
                           [
                             m("div",{class:"container"},),
@@ -96,6 +107,33 @@
                                           }
                                       }),
                               m("button",BtnAttr, "Filter"),
+                              //slider
+                              m("div",
+                                { oncreate: function(vnode_local)
+                                  {
+                                    var myslider = vnode_local.dom; // This is the same as doing ’document.getElementById(‘id_slider’);
+                                    console.log(myslider)
+                                    noUiSlider.create(myslider,
+                                       {
+                                         start: [125, 130],
+                                         connect: [true, true, true],
+                                         tooltips: [ true, true ],
+                                         range: { 'min': 120,
+                                                  'max': 150
+                                                }
+                                        });
+
+                                    myslider.noUiSlider.on('update', function (value)
+                                    {
+                                      // Assign slider values to the state variables we use to track the price range to filter on
+                                      price_low = value[0];
+                                      price_high = value[1];
+                                     // Now that the state variables have been updated, get mithril to redraw the component
+                                     m.redraw();
+                                    });
+                                  }
+                                }
+                              ), //slider
                               )//myform
                             ),//form division
                           m("table.table.table-striped",
